--- a/index.html
+++ b/index.html
@@ -9,8 +9,17 @@
 </head>
 <body>
   <header>
-      <h1>Expedition</h1>
+      <h1>Expediction</h1>
   </header>
+  <div class="container">
+        <main>
+
+        </main>
+    </div>
+
+    <footer>
+        Made with ♥ @ Udacity
+    </footer>
     <script src="js/app.js"></script>
 </body>
 </html>
